[package]
name = "test_reqwest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
bigdecimal = "0.3.0"
chrono = "0.4.19"
chrono-tz = "0.6.0"
futures = "0.3.17"
reqwest = { version="0.11.6", default-features = false, features=["json", "rustls-tls"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
sqlx = { version = "0.5.9", features = ["postgres", "runtime-actix-rustls", "chrono", "bigdecimal"] }
#tokio = { version = "1.12.0", features=["full"] }
